# Potato

./: .gitignore  CMakeLists.txt  README.md  README_PotatoEbnf.md  README_PotatoIR.md  README_PotatoPointer.md  README_PotatoReg.md  README_PotatoSLRX.md  README_PotatoStrEncode.md  README_PotatoStrFormat.md  README_PotatoTMP.md  README_PotatoTaskFlow.md  README_PotatoTaskSystem.md  xmake.lua  xmake_generate_vs_project.ps1
Demo/Ebnf/: Ebnf.sln  Ebnf.vcxproj  Ebnf.vcxproj.filters  EbnfDemo.cpp
Potato/: CMakeLists.txt  Potato.ixx  PotatoAllocator.ixx  PotatoArchive.cpp  PotatoArchive.ixx  PotatoDocument.cpp  PotatoDocument.ixx  PotatoEBNF.cpp  PotatoEBNF.ixx  PotatoEncode.cpp  PotatoEncode.ixx  PotatoFormat.cpp  PotatoFormat.ixx  PotatoGraph.cpp  PotatoGraph.ixx  PotatoIR.cpp  PotatoIR.ixx  PotatoInterval.ixx  PotatoLog.cpp  PotatoLog.ixx  PotatoMemoryLayout.ixx  PotatoMisc.ixx  PotatoPath.cpp  PotatoPath.ixx  PotatoPointer.ixx  PotatoReg.cpp  PotatoReg.ixx  PotatoSLRX.cpp  PotatoSLRX.ixx  PotatoSTD.ixx  PotatoSmartPtr.ixx  PotatoStreamer.cpp  PotatoStreamer.ixx  PotatoTMP.ixx  PotatoTask.cpp  PotatoTask.ixx  PotatoTaskFlow.cpp  PotatoTaskFlow.ixx  PotatoTaskGraphic.cpp  PotatoTaskGraphic.ixx  (+2 more)
Potato/HeaderUnits/: CTREHeaderUnits.hpp
Potato/Implement/: Ebnf.cpp  PotatoDLr.cpp  PotatoEbnf.cpp  PotatoMiniCore.cpp  PotatoMisc.cpp  PotatoPath.cpp  PotatoReg.cpp  PotatoStrEncode.cpp  PotatoStrFormat.cpp
Potato/Include/: PotatoDLr.h  PotatoEbnf.h  PotatoMiniCore.h  PotatoMisc.h  PotatoPath.h  PotatoReg.h  PotatoStrEncode.h  PotatoStrFormat.h  PotatoTMP.h
Potato/Private/: ConstDataForm.cpp  Ebnf.cpp  FileSystem.cpp  Grammar.cpp  HIR.cpp  IntermediateRepresentation.cpp  Lexical.cpp  LowLevelCore.cpp  LowLevelVirtualCore.cpp  Lr.cpp  Lr0.cpp  MemoryModel.cpp  MiniCore.cpp  Misc.cpp  PotatoDLr.cpp  PotatoMisc.cpp  PotatoPath.cpp  PotatoReg.cpp  PotatoStrEncode.cpp  SVM.cpp  StrEncode.cpp  StrFormat.cpp  StrScanner.cpp  Symbol.cpp  SymbolForm.cpp  Types.cpp  Unfa.cpp  tool.cpp
Potato/Public/: AutoAdapter.h  ConstDataForm.h  Ebnf.h  FileSystem.h  Grammar.h  HIR.h  IR.h  IntermediateRepresentation.h  Interval.h  IntrusivePointer.h  Lexical.h  LowLevelCore.h  LowLevelVirtualCore.h  Lr.h  Lr0.h  MemoryModel.h  MiniCore.h  Misc.h  PotatoDLr.h  PotatoEbnf.h  PotatoIR.h  PotatoInterval.h  PotatoIntrusivePointer.h  PotatoMisc.h  PotatoStrEncode.h  PotatoStrFormat.h  SVM.h  StrEncode.h  StrFormat.h  StrScanner.h  Symbol.h  SymbolForm.h  Types.h  Unfa.h  auto_adapter.h  smart_pointer.h  tmp.h  tool.h
Private/: PotatoDLr.cpp  PotatoDocument.cpp  PotatoEbnf.cpp  PotatoIR.cpp  PotatoMisc.cpp  PotatoPath.cpp  PotatoReg.cpp  PotatoSLRX.cpp  PotatoStrEncode.cpp  PotatoStrFormat.cpp  PotatoVirtualPath.cpp
Project/Potato/: Potato.vcxproj  Potato.vcxproj.filters
Project/PotatoStatic/: PotatoStatic.vcxproj  PotatoStatic.vcxproj.filters
Project/UnitTesting/: DLrSample.cpp  EbnfSample.cpp  IntrusicePointerSample.cpp  MiscSample.cpp  RegSample.cpp  SLRXSample.cpp  StrEncodeSample.cpp  StrFormatSample.cpp  TMPSample.cpp  TestingTypes.h  UnitTesting.cpp  UnitTesting.sln  UnitTesting.vcxproj  UnitTesting.vcxproj.filters
Public/: PotatoDocument.h  PotatoEbnf.h  PotatoIntrusivePointer.h  PotatoMisc.h  PotatoReg.h  PotatoSLRX.h  PotatoStrEncode.h  PotatoStrFormat.h  PotatoTMP.h
Test/: EbnfTest.cpp  EncodeTest.cpp  FormatTest.cpp  IRTest.cpp  IntervalTest.cpp  LogTest.cpp  MiscTest.cpp  PointerTest.cpp  RegTest.cpp  SLRXTest.cpp  SmartPtrTest.cpp  TMPTest.cpp  TaskFlowTest.cpp  TaskGraphicTest.cpp  TaskSystemTest.cpp  TaskTest.cpp
include/Potato/: PotatoDocument.h  PotatoEbnf.h  PotatoIR.h  PotatoIntrusivePointer.h  PotatoMisc.h  PotatoReg.h  PotatoSLRX.h  PotatoSmartPtr.h  PotatoStrEncode.h  PotatoStrFormat.h  PotatoTMP.h  PotatoVirtualPath.h
src/: CMakeLists.txt  PotatoDocument.cpp  PotatoEbnf.cpp  PotatoIR.cpp  PotatoMisc.cpp  PotatoReg.cpp  PotatoSLRX.cpp  PotatoStrEncode.cpp  PotatoStrFormat.cpp  PotatoVirtualPath.cpp
test/: CMakeLists.txt  EbnfSample.cpp  IntrusivePointerSample.cpp  MiscSample.cpp  RegSample.cpp  SLRXSample.cpp  SmartPtrSample.cpp  StrEncodeSample.cpp  StrFormatSample.cpp  TMPSample.cpp  TestingTypes.h  UnitTesting.cpp
